# hacku-backend

./: .gitignore  docker-compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yaml  feature.md
Docker/python/: Dockerfile
db/postgres/pgdata/base/13756/: 2619
db/postgres/pgdata/global/: 1260  1262  2671  2672  pg_control
hacku_backend/: main.py
hacku_backend/libs/: akubi.py  combo.py  db_util.py  ranking.py  register.py  util.py  view.py
postgres/: init.sql
tests/: test_hacku_backend.py
